--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
         "psr-4": {
             "App\\": "app/"
         },
+        "files": [
+            "app/helper.php"
+        ],
         "classmap": [
             "database/seeds",
             "database/factories"
@@ -46,7 +49,10 @@
     "autoload-dev": {
         "psr-4": {
             "Tests\\": "tests/"
-        }
+        },
+        "files": [
+            "app/helper.php"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
